--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         </activity>
         <activity android:name=".GameActivity" />
         <activity android:name=".TutorialActivity" />
-        <activity android:name=".PauseDialog"></activity>
+        <activity android:name=".PauseDialog" />
+        <activity android:name=".SettingsActivity"></activity>
     </application>
 
 </manifest>
